cmake_minimum_required(VERSION 3.5)
project(bash_4_3_30)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    builtins/bashgetopt.c
    builtins/bashgetopt.h
    builtins/common.c
    builtins/common.h
    builtins/evalfile.c
    builtins/evalstring.c
    builtins/gen-helpfiles.c
    builtins/getopt.c
    builtins/getopt.h
    builtins/mkbuiltins.c
    builtins/psize.c
    CWRU/misc/errlist.c
    CWRU/misc/hpux10-dlfcn.h
    CWRU/misc/open-files.c
    CWRU/misc/sigs.c
    CWRU/misc/sigstat.c
    examples/loadables/perl/bperl.c
    examples/loadables/perl/iperl.c
    examples/loadables/basename.c
    examples/loadables/cat.c
    examples/loadables/dirname.c
    examples/loadables/finfo.c
    examples/loadables/head.c
    examples/loadables/hello.c
    examples/loadables/id.c
    examples/loadables/ln.c
    examples/loadables/logname.c
    examples/loadables/mkdir.c
    examples/loadables/mypid.c
    examples/loadables/necho.c
    examples/loadables/pathchk.c
    examples/loadables/print.c
    examples/loadables/printenv.c
    examples/loadables/push.c
    examples/loadables/realpath.c
    examples/loadables/rmdir.c
    examples/loadables/sleep.c
    examples/loadables/strftime.c
    examples/loadables/sync.c
    examples/loadables/tee.c
    examples/loadables/template.c
    examples/loadables/truefalse.c
    examples/loadables/tty.c
    examples/loadables/uname.c
    examples/loadables/unlink.c
    examples/loadables/whoami.c
    include/ansi_stdlib.h
    include/chartypes.h
    include/filecntl.h
    include/gettext.h
    include/maxpath.h
    include/memalloc.h
    include/ocache.h
    include/posixdir.h
    include/posixjmp.h
    include/posixselect.h
    include/posixstat.h
    include/posixtime.h
    include/posixwait.h
    include/shmbchar.h
    include/shmbutil.h
    include/shtty.h
    include/stat-time.h
    include/stdc.h
    include/systimes.h
    include/typemax.h
    include/unionwait.h
    lib/glob/collsyms.h
    lib/glob/glob.c
    lib/glob/glob.h
    lib/glob/glob_loop.c
    lib/glob/gmisc.c
    lib/glob/ndir.h
    lib/glob/sm_loop.c
    lib/glob/smatch.c
    lib/glob/strmatch.c
    lib/glob/strmatch.h
    lib/glob/xmbsrtowcs.c
    lib/intl/bindtextdom.c
    lib/intl/dcgettext.c
    lib/intl/dcigettext.c
    lib/intl/dcngettext.c
    lib/intl/dgettext.c
    lib/intl/dngettext.c
    lib/intl/eval-plural.h
    lib/intl/explodename.c
    lib/intl/finddomain.c
    lib/intl/gettext.c
    lib/intl/gettextP.h
    lib/intl/gmo.h
    lib/intl/hash-string.h
    lib/intl/intl-compat.c
    lib/intl/l10nflist.c
    lib/intl/loadinfo.h
    lib/intl/loadmsgcat.c
    lib/intl/localcharset.c
    lib/intl/localcharset.h
    lib/intl/localealias.c
    lib/intl/localename.c
    lib/intl/log.c
    lib/intl/ngettext.c
    lib/intl/os2compat.c
    lib/intl/os2compat.h
    lib/intl/osdep.c
    lib/intl/plural-exp.c
    lib/intl/plural-exp.h
    lib/intl/plural.c
    lib/intl/relocatable.c
    lib/intl/relocatable.h
    lib/intl/textdomain.c
    lib/malloc/alloca.c
    lib/malloc/getpagesize.h
    lib/malloc/imalloc.h
    lib/malloc/malloc.c
    lib/malloc/mstats.h
    lib/malloc/shmalloc.h
    lib/malloc/stats.c
    lib/malloc/stub.c
    lib/malloc/table.c
    lib/malloc/table.h
    lib/malloc/trace.c
    lib/malloc/watch.c
    lib/malloc/watch.h
    lib/malloc/xmalloc.c
    lib/readline/examples/excallback.c
    lib/readline/examples/fileman.c
    lib/readline/examples/histexamp.c
    lib/readline/examples/manexamp.c
    lib/readline/examples/rl-callbacktest.c
    lib/readline/examples/rl.c
    lib/readline/examples/rlcat.c
    lib/readline/examples/rltest.c
    lib/readline/ansi_stdlib.h
    lib/readline/bind.c
    lib/readline/callback.c
    lib/readline/chardefs.h
    lib/readline/colors.c
    lib/readline/colors.h
    lib/readline/compat.c
    lib/readline/complete.c
    lib/readline/display.c
    lib/readline/emacs_keymap.c
    lib/readline/funmap.c
    lib/readline/histexpand.c
    lib/readline/histfile.c
    lib/readline/histlib.h
    lib/readline/history.c
    lib/readline/history.h
    lib/readline/histsearch.c
    lib/readline/input.c
    lib/readline/isearch.c
    lib/readline/keymaps.c
    lib/readline/keymaps.h
    lib/readline/kill.c
    lib/readline/macro.c
    lib/readline/mbutil.c
    lib/readline/misc.c
    lib/readline/nls.c
    lib/readline/parens.c
    lib/readline/parse-colors.c
    lib/readline/parse-colors.h
    lib/readline/posixdir.h
    lib/readline/posixjmp.h
    lib/readline/posixselect.h
    lib/readline/posixstat.h
    lib/readline/readline.c
    lib/readline/readline.h
    lib/readline/rlconf.h
    lib/readline/rldefs.h
    lib/readline/rlmbutil.h
    lib/readline/rlprivate.h
    lib/readline/rlshell.h
    lib/readline/rlstdc.h
    lib/readline/rltty.c
    lib/readline/rltty.h
    lib/readline/rltypedefs.h
    lib/readline/rlwinsize.h
    lib/readline/savestring.c
    lib/readline/search.c
    lib/readline/shell.c
    lib/readline/signals.c
    lib/readline/tcap.h
    lib/readline/terminal.c
    lib/readline/text.c
    lib/readline/tilde.c
    lib/readline/tilde.h
    lib/readline/undo.c
    lib/readline/util.c
    lib/readline/vi_keymap.c
    lib/readline/vi_mode.c
    lib/readline/xfree.c
    lib/readline/xmalloc.c
    lib/readline/xmalloc.h
    lib/sh/casemod.c
    lib/sh/clktck.c
    lib/sh/clock.c
    lib/sh/dprintf.c
    lib/sh/eaccess.c
    lib/sh/fmtullong.c
    lib/sh/fmtulong.c
    lib/sh/fmtumax.c
    lib/sh/fnxform.c
    lib/sh/fpurge.c
    lib/sh/getcwd.c
    lib/sh/getenv.c
    lib/sh/inet_aton.c
    lib/sh/input_avail.c
    lib/sh/itos.c
    lib/sh/mailstat.c
    lib/sh/makepath.c
    lib/sh/mbscasecmp.c
    lib/sh/mbschr.c
    lib/sh/mbscmp.c
    lib/sh/memset.c
    lib/sh/mktime.c
    lib/sh/netconn.c
    lib/sh/netopen.c
    lib/sh/oslib.c
    lib/sh/pathcanon.c
    lib/sh/pathphys.c
    lib/sh/rename.c
    lib/sh/setlinebuf.c
    lib/sh/shmatch.c
    lib/sh/shmbchar.c
    lib/sh/shquote.c
    lib/sh/shtty.c
    lib/sh/snprintf.c
    lib/sh/spell.c
    lib/sh/strcasecmp.c
    lib/sh/strcasestr.c
    lib/sh/strchrnul.c
    lib/sh/strdup.c
    lib/sh/strerror.c
    lib/sh/strftime.c
    lib/sh/stringlist.c
    lib/sh/stringvec.c
    lib/sh/strnlen.c
    lib/sh/strpbrk.c
    lib/sh/strstr.c
    lib/sh/strtod.c
    lib/sh/strtoimax.c
    lib/sh/strtol.c
    lib/sh/strtoll.c
    lib/sh/strtoul.c
    lib/sh/strtoull.c
    lib/sh/strtoumax.c
    lib/sh/strtrans.c
    lib/sh/times.c
    lib/sh/timeval.c
    lib/sh/tmpfile.c
    lib/sh/uconvert.c
    lib/sh/ufuncs.c
    lib/sh/unicode.c
    lib/sh/vprint.c
    lib/sh/wcsdup.c
    lib/sh/wcsnwidth.c
    lib/sh/wcswidth.c
    lib/sh/winsize.c
    lib/sh/zcatfd.c
    lib/sh/zgetline.c
    lib/sh/zmapfd.c
    lib/sh/zread.c
    lib/sh/zwrite.c
    lib/termcap/ltcap.h
    lib/termcap/termcap.c
    lib/termcap/termcap.h
    lib/termcap/tparam.c
    lib/termcap/version.c
    lib/tilde/shell.c
    lib/tilde/tilde.c
    lib/tilde/tilde.h
    support/bashversion.c
    support/man2html.c
    support/mksignames.c
    support/printenv.c
    support/recho.c
    support/signames.c
    support/xcase.c
    support/zecho.c
    alias.c
    alias.h
    array.c
    array.h
    arrayfunc.c
    arrayfunc.h
    assoc.c
    assoc.h
    bashansi.h
    bashhist.c
    bashhist.h
    bashintl.h
    bashjmp.h
    bashline.c
    bashline.h
    bashtypes.h
    bracecomp.c
    braces.c
    builtins.h
    command.h
    config-bot.h
    config-top.h
    conftypes.h
    copy_cmd.c
    dispose_cmd.c
    dispose_cmd.h
    error.c
    error.h
    eval.c
    execute_cmd.c
    execute_cmd.h
    expr.c
    externs.h
    findcmd.c
    findcmd.h
    flags.c
    flags.h
    general.c
    general.h
    hashcmd.c
    hashcmd.h
    hashlib.c
    hashlib.h
    input.c
    input.h
    jobs.c
    jobs.h
    list.c
    locale.c
    mailcheck.c
    mailcheck.h
    make_cmd.c
    make_cmd.h
    mksyntax.c
    nojobs.c
    parser.h
    patchlevel.h
    pathexp.c
    pathexp.h
    pcomplete.c
    pcomplete.h
    pcomplib.c
    print_cmd.c
    quit.h
    redir.c
    redir.h
    shell.c
    shell.h
    sig.c
    sig.h
    siglist.c
    siglist.h
    stringlib.c
    subst.c
    subst.h
    syntax.h
    test.c
    test.h
    trap.c
    trap.h
    unwind_prot.c
    unwind_prot.h
    variables.c
    variables.h
    version.c
    xmalloc.c
    xmalloc.h
    y.tab.c
    y.tab.h)

add_executable(bash_4_3_30 ${SOURCE_FILES})